--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,42 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/fav/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/fav/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/fav/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/fav/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/fav/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/fav/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/fav/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/fav/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/fav/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/fav/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/fav/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/fav/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/fav/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/fav/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="%PUBLIC_URL%/fav/manifest.json">
+    <!-- Primary Meta Tags -->
+    <title>HYDRA - Where gods deploy!</title>
+    <meta name="title" content="HYDRA - Where gods deploy!">
+    <meta name="description" content="We are the hosting and deployment branch of the Advertisement Agency Christian Aichner. We specialize in the hosting of closed-source projects on GitHub.">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://operation-hydra.github.io/Homepage/">
+    <meta property="og:title" content="HYDRA - Where gods deploy!">
+    <meta property="og:description" content="We are the hosting and deployment branch of the Advertisement Agency Christian Aichner. We specialize in the hosting of closed-source projects on GitHub.">
+    <meta property="og:image" content="%PUBLIC_URL%/fav/preview.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://operation-hydra.github.io/Homepage/">
+    <meta property="twitter:title" content="HYDRA - Where gods deploy!">
+    <meta property="twitter:description" content="We are the hosting and deployment branch of the Advertisement Agency Christian Aichner. We specialize in the hosting of closed-source projects on GitHub.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/fav/preview.jpg">
   </head>
   <body>
     <noscript>
