Update content for meta images
The meta tags for images (og/twitter) have been 
updated.

--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,14 @@
     <meta property="og:url" content="https://operation-hydra.github.io/Homepage/">
     <meta property="og:title" content="HYDRA - Where gods deploy!">
     <meta property="og:description" content="We are the hosting and deployment branch of the Advertisement Agency Christian Aichner. We specialize in the hosting of closed-source projects on GitHub.">
-    <meta property="og:image" content="%PUBLIC_URL%/fav/preview.jpg">
+    <meta property="og:image" content="https://www.aichner-christian.com/img/logo/hydra_preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://operation-hydra.github.io/Homepage/">
     <meta property="twitter:title" content="HYDRA - Where gods deploy!">
     <meta property="twitter:description" content="We are the hosting and deployment branch of the Advertisement Agency Christian Aichner. We specialize in the hosting of closed-source projects on GitHub.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/fav/preview.jpg">
+    <meta property="twitter:image" content="https://www.aichner-christian.com/img/logo/hydra_preview.jpg">
   </head>
   <body>
     <noscript>
